--- a/stlyes.css
+++ b/stlyes.css
@@ -1,5 +1,5 @@
 :root {
-    --cor-de-fundo: #EBECEE;
+    --cor-de-fundo: #0055ff;
 }
 
 body {
@@ -7,5 +7,5 @@ body {
 }
 
 h1 {
-    background-color: rgb(233, 15, 15);
+    background-color: rgb(125, 255, 238);
 }
