--- a/stlyes.css
+++ b/stlyes.css
@@ -1,5 +1,5 @@
 :root {
-    --cor-de-fundo: #0055ff;
+    --cor-de-fundo: #000000;
 }
 
 body {
@@ -7,5 +7,11 @@ body {
 }
 
 h1 {
-    background-color: rgb(125, 255, 238);
+    background-color: rgb(255, 255, 255);
+}
+.cabeçalho_menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    background-image: url("../img/Menu.svg");
+    display: inline-block;
 }
