--- a/stlyes.css
+++ b/stlyes.css
@@ -1,3 +1,4 @@
+@import url("styles/header.css");
 :root {
     --cor-de-fundo: #000000;
 }
@@ -9,9 +10,4 @@ body {
 h1 {
     background-color: rgb(255, 255, 255);
 }
-.cabeçalho_menu-hamburguer {
-    width: 24px;
-    height: 24px;
-    background-image: url("../img/Menu.svg");
-    display: inline-block;
-}
+
