--- a/stlyes.css
+++ b/stlyes.css
@@ -1,13 +1,10 @@
 @import url("styles/header.css");
+
 :root {
-    --cor-de-fundo: #ffffff;
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
 }
 
 body {
     background-color: var(--cor-de-fundo);
 }
-
-h1 {
-    background-color: rgb(255, 255, 255);
-}
-
